tdf#157465: getBytes may trigger an exception with hsql

So test the SQL type of the column and:
- if it's css::sdbc::DataType::BIT treat it specifically
- otherwise, use plain getString method

Thank you Noel for the idea!

Change-Id: Ib5003d96c1b5ce541fb17e6e31592858f8cd61d7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157849
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>